[package]
name = "dot-block-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
frame-decode = "0.8.0"
frame-metadata = { version = "23.0.0", features = ["legacy"] }
hex = "0.4.3"
parity-scale-codec = "3.7.4"
scale-info-legacy = "0.2.2"
scale-type-resolver = "0.2.0"
scale-value = "0.18.0"
serde_yaml = "0.9.34"
subxt-core = "0.42.1"
subxt-rpcs = { version = "0.42.1", features = ["subxt"] }
tokio = { version = "1.45.0", features = ["full"] }
